--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,22 @@ tr:nth-child(7) :nth-child(3):hover, tr:nth-child(9) td:nth-child(n+2):nth-child
     background-color: rgba(61, 161, 160, 1);
 }
 
+tr:nth-child(n+3):nth-child(-n+7) td:nth-child(13), tr:nth-child(n+5):nth-child(-n+7) td:nth-child(14), tr:nth-child(6) :nth-child(15) {
+    background-color: rgba(255, 192, 205, 1);
+}
+
+tr:nth-child(n+3):nth-child(-n+7) td:nth-child(13):hover, tr:nth-child(n+5):nth-child(-n+7) td:nth-child(14):hover, tr:nth-child(6) :nth-child(15):hover {
+    background-color: rgba(255, 192, 205, 0.5);
+}
+
+tr:nth-child(2) :nth-child(13), tr:nth-child(n+3):nth-child(-n+4) td:nth-child(14), tr:nth-child(n+4):nth-child(-n+5) td:nth-child(15), tr:nth-child(n+5):nth-child(-n+6) td:nth-child(16) {
+    background-color: rgba(255, 155, 105, 1);
+}
+
+tr:nth-child(2) :nth-child(13):hover, tr:nth-child(n+3):nth-child(-n+4) td:nth-child(14):hover, tr:nth-child(n+4):nth-child(-n+5) td:nth-child(15):hover, tr:nth-child(n+5):nth-child(-n+6) td:nth-child(16):hover {
+    background-color: rgba(255, 155, 105, 0.5);
+}
+
 tr:nth-child(n+2):nth-child(-n+6) td:nth-child(17), tr:nth-child(7) :nth-child(15) {
     background-color: rgba(215, 177, 62, 1);
 }
